# anki-connect-mcp

./: .env.example  .gitignore  .mcp.json  README.md  anki_best_practices.md  main.py  pyproject.toml
docs/: HTML_FORMATTING.md
src/anki_connect_mcp/: __init__.py  config.py  formatting.py  models.py  resources.py  server.py
src/anki_connect_mcp/analyzers/: __init__.py  performance.py  quality.py  recommendations.py
src/anki_connect_mcp/client/: __init__.py  anki_client.py
src/anki_connect_mcp/db/: __init__.py  database.py
src/anki_connect_mcp/tools/: __init__.py  analysis.py  cards.py  decks.py  memory.py  queries.py
src/anki_connect_mcp/validators/: __init__.py  card_validator.py  rules.py
