[project]
name = "anki-connect-mcp"
version = "0.1.0"
description = "FastMCP server for Anki flashcard creation and management via AnkiConnect"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp<3.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "duckdb>=1.2.0",
    "pymupdf>=1.26.7",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.14.3",
    "pygments>=2.17.0",
]

[project.scripts]
anki-connect-mcp = "anki_connect_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.36.2",
    "ruff>=0.14.10",
    "pytest>=8.3.4",
    "pre-commit>=4.0.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.basedpyright]
typeCheckingMode = "basic"
